# src/api/DTO/user.go
@@ -1,0 +1,12 @@
+package dto
+
+type GetOtpRequest struct {
+	MobileNumber string `json:"mobileNumber" binding:"required,mobile,min=11,max=11"`
+}
+
+type TokenDetail struct {
+	AccessToken string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
+	AccessTokenExpireTime int `json:"accessTokenExpireTime"`
+	RefreshTokenExpireTime int `json:"refreshTokenExpireTime"`
+}
